fix: Alignment in overview

--- a/style/main.scss
+++ b/style/main.scss
@@ -6,19 +6,6 @@ body {
 	text-align: center;
 }
 
-
-// .btn-primary {
-// 	color: #f8fafc;
-// 	background-color: #007bc1;
-// 	border-color: #007ac19c;
-// }
-
-// .btn-primary:hover {
-// 	color: #f8fafc;
-// 	background-color: #007ac1aa;
-// 	border-color: #007ac168;
-// }
-
 .down {
 	margin-top: 10rem;
 }
@@ -28,7 +15,7 @@ body {
 }
 
 .table-responsive {
-	max-height: 400px;
+	max-height: 300px;
   }
 
 
